--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Welcome!</p>   
+    <p>Welcome! 
+        <a>Click here to see</a>
+    </p>   
 </body>
 </html>
