--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Welcome! 
-        <a>Click here to see</a>
+        <a href="">Click Here</a>
     </p>   
 </body>
 </html>
