--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Welcome! 
-        <a href="">Click Here</a>
+        <a href="https://www.youtube.com/watch?v=5Q6n5NE6Cb4">Click Here</a>
     </p>   
 </body>
 </html>
