--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <body>
     <p>Welcome! 
         <a href="https://www.youtube.com/watch?v=5Q6n5NE6Cb4">Click Here</a>
+        <h1> How to dunk </h1>
+
+        <p> By Me </p>
+
+        <h2> First: Find a Basketball</h2>
+
+        <p> When dunking it's important to find a basketball and a place to practice where you can see what a ten foot hoop would look like.</p>
+
+        
     </p>   
 </body>
 </html>
