--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Welcome! 
-        <a href="https://www.youtube.com/watch?v=5Q6n5NE6Cb4">Click Here</a>
+        <a href="https://youtu.be/5Q6n5NE6Cb4?feature=shared">Click Here</a>
         <h1> How to dunk </h1>
 
         <p> By Me </p>
@@ -16,7 +16,7 @@
 
         <p> When dunking it's important to find a basketball and a place to practice where you can see what a ten foot hoop would look like.</p>
 
-        
+
     </p>   
 </body>
 </html>
