--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Welcome! 
-        <a href="https://youtu.be/5Q6n5NE6Cb4?feature=shared">Click Here</a>
+        <a href="https://youtu.be/5Q6n5NE6Cb4?feature=shared">Click here to watch a cool dunk!</a>
         <h1> How to dunk </h1>
 
         <p> By Me </p>
@@ -16,7 +16,25 @@
 
         <p> When dunking it's important to find a basketball and a place to practice where you can see what a ten foot hoop would look like.</p>
 
+        <p> Here are some brands of basketballs that will work:</p>
 
+        <ul>
+            <li>Spalding</li>
+            <li>Wilson</li>
+            <li>Baden</li>
+        </ul>
+        <p>My personal favorite is the Spalding but the NBA uses Wilson and the WNBA uses a Wilson as well.</p>
+
+        <p>There are only a couple WNBA players who have dunked before:</p>
+        <ol>
+            <li>Lisa Leslie</li>
+            <li>Candance Parker</li>
+            <li>Michelle Snow</li>
+            <li>Sylvia Fowles</li>
+            <li>Brittney Griner</li>
+            <li>Jonquel Jones</li>
+        </ol>
+        <a href ="https://www.youtube.com/watch?v=o5xInpA--LM">Click here to watch their dunks</a>
     </p>   
 </body>
 </html>
