add image basketballswish and style

--- a/index.html
+++ b/index.html
@@ -36,5 +36,13 @@
         </ol>
         <a href ="https://www.youtube.com/watch?v=o5xInpA--LM">Click here to watch their dunks</a>
     </p>   
+
+    <img
+    src="images/basketballswish.jpeg"
+    alt="Image of a basketball through a basketball hoop"
+    style="width: 384px; height: auto;"
+    >
+
+
 </body>
 </html>
