add strong and em

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
         <h2> First: Find a Basketball</h2>
 
-        <p> When dunking it's important to find a basketball and a place to practice where you can see what a ten foot hoop would look like.</p>
+        <p> When dunking it's important to find a <strong>basketball</strong> and a place to practice where you can see what a ten foot hoop would look like.</p>
 
-        <p> Here are some brands of basketballs that will work:</p>
+        <p> Here are some brands of basketballs that <em>will work</em>:</p>
 
         <ul>
             <li>Spalding</li>
