changed paragraph to not wrapping the whole text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Welcome! 
+    <p>Welcome!</p>
         <a href="https://youtu.be/5Q6n5NE6Cb4?feature=shared">Click here to watch a cool dunk!</a>
         <h1> How to dunk </h1>
 
@@ -35,7 +35,7 @@
             <li>Jonquel Jones</li>
         </ol>
         <a href ="https://www.youtube.com/watch?v=o5xInpA--LM">Click here to watch their dunks</a>
-    </p>   
+      
 
     <img
     src="images/basketballswish.jpeg"
