--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Best Basketball Website</title>
+    <link href="styles/main.css" rel="stylesheet">
 </head>
 <body>
     <p>Welcome!</p>
@@ -12,7 +13,7 @@
         
         <p> By Me </p>
 
-        <h2> First: Find a Basketball</h2>
+        <h2 id= "first"> First: Find a Basketball</h2>
 
         <p> When dunking it's important to find a <strong>basketball</strong> and a place to practice where you can see what a ten foot hoop would look like.</p>
 
