--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link href="styles/main.css" rel="stylesheet">
 </head>
 <body>
-    <p>Welcome!</p>
+    <p class = "silly">Welcome!</p>
         <h1> How to dunk </h1>
-        <a href="https://youtu.be/5Q6n5NE6Cb4?feature=shared">Click here to watch a cool dunk!</a>
+        <a href="https://youtu.be/5Q6n5NE6Cb4?feature=shared" class = "dunking-videos">Click here to watch a cool dunk!</a>
         
         <p> By Me </p>
 
         <h2 id= "first"> First: Find a Basketball</h2>
 
-        <p> When dunking it's important to find a <strong>basketball</strong> and a place to practice where you can see what a ten foot hoop would look like.</p>
+        <p class = "silly serious"> When dunking it's important to find a <strong>basketball</strong> and a place to practice where you can see what a ten foot hoop would look like. </p>
 
-        <p> Here are some brands of basketballs that <em>will work</em>:</p>
+        <p> Here are some brands of basketballs that <em class = "serious">will work</em>:</p>
 
         <ul>
             <li>Spalding</li>
@@ -35,7 +35,7 @@
             <li>Brittney Griner</li>
             <li>Jonquel Jones</li>
         </ol>
-        <a href ="https://www.youtube.com/watch?v=o5xInpA--LM">Click here to watch their dunks</a>
+        <a href ="https://www.youtube.com/watch?v=o5xInpA--LM" class = "dunking-videos">Click here to watch their dunks</a>
       
 
     <img
